[gd_scene load_steps=2 format=3 uid="uid://xuluuy8cronv"]

[ext_resource type="Script" uid="uid://b5g204bd37r44" path="res://scripts/powerup_manager.gd" id="1_gbfpq"]

[node name="PowerupManager" type="Node2D"]
script = ExtResource("1_gbfpq")

[node name="StompTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="MagnetTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="PierceTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RicochetTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="PoisonTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AutoAimTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CycloneTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="FlamesTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="FreeAmmoTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="IceTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
